[package]
name = "pink-lady"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Charbonneau <antoine@florencetelecom.com>"]
[[bin]]
name = "pink-lady"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
prometheus-client = { version = "0.21.2", features = ["default"] }
dotenv = "0.15.0"
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
